[tool.poetry]
name = "explore-gan"
version = "0.1.0"
description = ""
authors = ["Andre Wiradarma <awiradarma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
torchvision = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
